# modules/api/api-image/cmd/store.go
@@ -1,31 +1,47 @@
-package api
+package main
 
 import (
 	"fmt"
 	"net/http"
+	"os"
 	"sync"
 
+	"github.com/devbookhq/orchestration-services/modules/api/api-image/internal/handlers"
 	"github.com/devbookhq/orchestration-services/modules/api/api-image/pkg/nomad"
+	"github.com/devbookhq/orchestration-services/modules/api/api-image/pkg/refresh"
 	"github.com/gin-gonic/gin"
 )
 
 type APIStore struct {
-	nomad  *nomad.Nomad
-	NextId int64
-	Lock   sync.Mutex
+	sessionsCache *refresh.SessionCache
+	nomad         *nomad.Nomad
+	NextId        int64
+	Lock          sync.Mutex
 }
 
 func NewAPIStore(nomad *nomad.Nomad) *APIStore {
+	var initialSessions []*handlers.Session
+
+	initialSessions, err := nomad.GetSessions()
+	if err != nil {
+		initialSessions = []*handlers.Session{}
+		fmt.Fprintf(os.Stderr, "Error loading current sessions from Nomad\n: %s", err)
+	}
+
+	cache := refresh.NewSessionCache(nomad.DeleteSession, initialSessions)
+
 	return &APIStore{
-		nomad:  nomad,
-		NextId: 1000,
+		nomad:         nomad,
+		NextId:        1000,
+		sessionsCache: cache,
 	}
 }
 
 // This function wraps sending of an error in the Error format, and
 // handling the failure to marshal that.
 func sendAPIStoreError(c *gin.Context, code int, message string) {
-	apiErr := Error{
+
+	apiErr := handlers.Error{
 		Code:    int32(code),
 		Message: message,
 	}
@@ -37,43 +53,10 @@ func (p *APIStore) Get(c *gin.Context) {
 	c.String(http.StatusOK, "Health check successful")
 }
 
-func (p *APIStore) GetSessions(c *gin.Context) {
-	sessions, _, err := p.nomad.GetSessions(nomad.SessionJobID)
-
-	if err != nil {
-		sendAPIStoreError(c, http.StatusInternalServerError, "Error listing sessions")
-		return
-	}
-
-	c.JSON(http.StatusOK, sessions)
-}
-
-func (p *APIStore) PostSessions(c *gin.Context) {
-	session, _, err := p.nomad.CreateSession(nomad.SessionJobID)
-
-	if err != nil {
-		sendAPIStoreError(c, http.StatusInternalServerError, "Error creating session")
-		return
-	}
-
-	c.JSON(http.StatusCreated, Session{SessionId: session.DispatchedJobID})
-}
-
-func (p *APIStore) DeleteSessionsSessionId(c *gin.Context, id string) {
-	_, _, err := p.nomad.DeleteSession(nomad.SessionJobID)
-
-	if err != nil {
-		sendAPIStoreError(c, http.StatusInternalServerError, "Error deleting session")
-		return
-	}
-
-	c.JSON(http.StatusOK, Session{SessionId: id})
-}
-
 func (p *APIStore) PostEnv(c *gin.Context) {
 	// TODO: Check for API token
 
-	var env Environment
+	var env handlers.Environment
 	if err := c.Bind(&env); err != nil {
 		sendAPIStoreError(c, http.StatusBadRequest, fmt.Sprintf("Error when parsing request: %s", err))
 		return
