# modules/api/api-image/internal/handlers/api.gen.go
@@ -1,7 +1,7 @@
-// Package api provides primitives to interact with the openapi HTTP API.
+// Package handlers provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.10.1 DO NOT EDIT.
-package api
+package handlers
 
 import (
 	"fmt"
@@ -28,6 +28,9 @@ type ServerInterface interface {
 
 	// (DELETE /sessions/{session_id})
 	DeleteSessionsSessionId(c *gin.Context, sessionId string)
+
+	// (PUT /sessions/{session_id}/refresh)
+	PutSessionsSessionIdRefresh(c *gin.Context, sessionId string)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -99,6 +102,27 @@ func (siw *ServerInterfaceWrapper) DeleteSessionsSessionId(c *gin.Context) {
 	siw.Handler.DeleteSessionsSessionId(c, sessionId)
 }
 
+// PutSessionsSessionIdRefresh operation middleware
+func (siw *ServerInterfaceWrapper) PutSessionsSessionIdRefresh(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "session_id" -------------
+	var sessionId string
+
+	err = runtime.BindStyledParameter("simple", false, "session_id", c.Param("session_id"), &sessionId)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"msg": fmt.Sprintf("Invalid format for parameter session_id: %s", err)})
+		return
+	}
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+	}
+
+	siw.Handler.PutSessionsSessionIdRefresh(c, sessionId)
+}
+
 // GinServerOptions provides options for the Gin server.
 type GinServerOptions struct {
 	BaseURL     string
@@ -126,6 +150,8 @@ func RegisterHandlersWithOptions(router *gin.Engine, si ServerInterface, options
 	router.POST(options.BaseURL+"/sessions", wrapper.PostSessions)
 
 	router.DELETE(options.BaseURL+"/sessions/:session_id", wrapper.DeleteSessionsSessionId)
+
+	router.PUT(options.BaseURL+"/sessions/:session_id/refresh", wrapper.PutSessionsSessionIdRefresh)
 
 	return router
 }
