# modules/api/api-image/internal/handlers/types.gen.go
@@ -1,7 +1,7 @@
-// Package api provides primitives to interact with the openapi HTTP API.
+// Package handlers provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.10.1 DO NOT EDIT.
-package api
+package handlers
 
 // Defines values for EnvironmentRuntime.
 const (
@@ -39,3 +39,15 @@ type Session struct {
 	// Identifier of the session
 	SessionId string `json:"session_id"`
 }
+
+// SessionForm defines model for SessionForm.
+type SessionForm struct {
+	// Identifier of a code snippet which which is the environment associated
+	CodeSnippetId string `json:"code_snippet_id"`
+}
+
+// PostSessionsJSONBody defines parameters for PostSessions.
+type PostSessionsJSONBody SessionForm
+
+// PostSessionsJSONRequestBody defines body for PostSessions for application/json ContentType.
+type PostSessionsJSONRequestBody PostSessionsJSONBody
